--- a/src/TestSandbox/SandBoxTest.twin/SandBoxTest.csproj
+++ b/src/TestSandbox/SandBoxTest.twin/SandBoxTest.csproj
@@ -11,6 +11,9 @@
     <ProjectReference Include="..\..\..\..\axsharp\src\AXSharp.abstractions\src\AXSharp.Abstractions\AXSharp.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\..\axsharp\src\AXSharp.connectors\src\AXSharp.Connector.S71500.WebAPI\AXSharp.Connector.S71500.WebAPI.csproj" />
     <ProjectReference Include="..\..\..\..\axsharp\src\AXSharp.connectors\src\AXSharp.Connector\AXSharp.Connector.csproj" />
+    <ProjectReference Include="..\..\components.cognex.vision\src\AXOpen.Cognex.Vision\ix_ax_axopen_cognex_vision.csproj" />
+    <ProjectReference Include="..\..\components.elements\src\AXOpen.Components.Elements\ix_ax_axopen_components_elements.csproj" />
+    <ProjectReference Include="..\..\components.pneumatics\src\AXOpen.Components.Pneumatics\ix_ax_axopen_components_pneumatics.csproj" />
     <ProjectReference Include="..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
     <ProjectReference Include="..\..\data\src\AXOpen.Data\ix_ax_axopen_data.csproj" />
     <ProjectReference Include="..\..\inspectors\src\AxOpen.Inspectors\ix_ax_axopen_inspectors.csproj" />
