--- a/src/components.abstractions/ctrl/AXSharp.config.json
+++ b/src/components.abstractions/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Components.Abstractions"}
+{"OutputProjectFolder":"..\\src\\AXOpen.Components.Abstractions","UseBase":false}
