--- a/src/components.pneumatics/ctrl/AXSharp.config.json
+++ b/src/components.pneumatics/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Components.Pneumatics"}
+{"OutputProjectFolder":"..\\src\\AXOpen.Components.Pneumatics","UseBase":false}
