--- a/src/integrations/ctrl/ix/axopen_integrations_ctrl.csproj
+++ b/src/integrations/ctrl/ix/axopen_integrations_ctrl.csproj
@@ -8,6 +8,7 @@
 	<ItemGroup>
 		<PackageReference Include="AXSharp.Abstractions"/>
 		<PackageReference Include="AXSharp.Connector"/>
+		<PackageReference Include="AXSharp.Connector.S71500.WebAPI"/>
 	</ItemGroup>
 
 	<ItemGroup>
