--- a/src/templates.simple/app/apax.yml
+++ b/src/templates.simple/app/apax.yml
@@ -1,19 +1,65 @@
-name: "tmp-app"
-version: 0.0.0
+name: "axosimple"
+version: '0.0.0-dev.0'
 type: app
 targets:
+  - plcsim
   - axunit-llvm
-variables:
-  APAX_BUILD_ARGS:
-    - "--debug" # Generate debug information for target "1500"
+registries:
+  '@ix-ax': https://npm.pkg.github.com/
 devDependencies:
   "@ax/sdk": ^4.0.8
-  "@ax/sld": 0.15.9
+  "@ax/sld": ^0.15.9
+  "@ax/stc": ^5.4.89
 dependencies:
-  "@ix-ax/axopen.core": '0.0.0-dev.0'
+  "@ix-ax/axopen.data": '0.0.0-dev.0'
+  "@ix-ax/axopen.inspectors": '0.0.0-dev.0' 
+  "@ix-ax/axopen.components.pneumatics": '0.0.0-dev.0'
+  "@ix-ax/axopen.components.elements": '0.0.0-dev.0'
+  "@ix-ax/axopen.components.cognex.vision": '0.0.0-dev.0'
+  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
+  
+  
+variables:
+  APAX_BUILD_ARGS: [-d]
 scripts:
+  ixc:
+    - dotnet tool restore --no-cache
+    - dotnet ixc
+    - dotnet ixr
+  postbuild: apax ixc
   download:
-    - apax install -L
+    - apax install
     - apax build
-    - apax sld -i $AXTARGETPLATFORMINPUT -t $AXTARGET
-      --accept-security-disclaimer --default-server-interface -r
+    # Here you will need to set the argumen -t to your plc OP and -i to platfrom you are dowloading to
+
+    # --default-server-interface is a must if you are using WebAPI      
+    - apax sld --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r --default-server-interface
+  watch:
+    - dotnet watch --project ..\\axosimple.app\\axosimple.hmi.csproj
+  da:
+    - apax download
+    - apax watch
+  check+download: |
+    if [ $AXTARGET ]; then
+      if [ $AXTARGETPLATFORMINPUT ]; then
+        if ping -n 1 $AXTARGET &> /dev/null; then
+          echo "Downloading from:" $AXTARGETPLATFORMINPUT "=>" $AXTARGET
+          apax download
+        else
+          echo "Target with IP address:" $AXTARGET "is not accessible. No download is going to be performed!!!"
+        fi
+      else
+        echo "Environment variable AXTARGETPLATFORMINPUT not defined!!!"
+      fi
+    else
+      echo "Environment variable AXTARGET not defined!!!"
+    fi
+  rr:
+    - apax build
+    - apax download
+    - apax watch
+  fr:
+    - ..\\scripts\\StartPlcSimAdvCli.exe
+    - apax install
+    - apax rr
+  
