--- a/docfx/components/toc.yml
+++ b/docfx/components/toc.yml
@@ -1,11 +1,11 @@
 items:
   - name: Abstractions
-    href: ../components.abstractions/docs/
+    href: ../components.abstractions/docs/index.html
   - name: Elements
-    href: ../components.elements/docs/
+    href: ../components.elements/docs/index.html
   - name: Pneumatics
-    href: ../components.pneumatics/docs/
+    href: ../components.pneumatics/docs/index.html
   - name: Cognex Vision
-    href: ../components.cognex.vision/docs
+    href: ../components.cognex.vision/docs/index.html
   - name: Library template
-    href: ../template.axolibrary/docs/
+    href: ../template.axolibrary/docs/index.html
