--- a/src/components.rexroth.drives/ctrl/apax.yml
+++ b/src/components.rexroth.drives/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen_components_rexroth_drives"
-version: '0.1.4-alpha.79'
+version: '0.0.0-dev.0'
 type: lib
 targets:
   - axunit-llvm
@@ -7,9 +7,10 @@ files:
   - src
 devDependencies:
   "@ax/sdk": ^4.0.8
+  "@ax/stc": 5.4.89
 scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ix-ax/axopen.components.abstractions": '0.1.4-alpha.79'
-  "@ix-ax/axopen.core": 0.1.4-alpha.79
+  "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.core": 0.0.0-dev.0
