--- a/src/components.rexroth.drives/src/AXOpen.Components.Rexroth.Drives.blazor/AXOpen.Components.Rexroth.Drives.blazor.csproj
+++ b/src/components.rexroth.drives/src/AXOpen.Components.Rexroth.Drives.blazor/AXOpen.Components.Rexroth.Drives.blazor.csproj
@@ -40,7 +40,7 @@
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
       <PrivateAssets>all</PrivateAssets>
@@ -52,9 +52,24 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.8" />
 	  
+  </ItemGroup>-->
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="GitVersion.MsBuild">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="AXSharp.Presentation.Blazor"/>
+    <PackageReference Include="AXSharp.Presentation.Blazor.Controls"/>
+    <PackageReference Include="Humanizer"/>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web"/>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client"/>
+
   </ItemGroup>
 
-	<ItemGroup>
+
+  <ItemGroup>
 		<None Include="..\..\..\..\assets\icons\icon_128_128.png">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
