--- a/src/components.rexroth.drives/src/AXOpen.Components.Rexroth.Drives/ix_ax_axopen_components_rexroth_drives.csproj
+++ b/src/components.rexroth.drives/src/AXOpen.Components.Rexroth.Drives/ix_ax_axopen_components_rexroth_drives.csproj
@@ -39,16 +39,27 @@
 	  <Content Include=".meta\**" />
 	</ItemGroup>
 
-	<ItemGroup>
+	<!--<ItemGroup>
 		<PackageReference Include="AXSharp.Abstractions" Version="0.14.2-alpha.135" />
 		<PackageReference Include="AXSharp.Connector" Version="0.14.2-alpha.135" />
 		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-	</ItemGroup>
+	</ItemGroup>-->
 
-	<ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AXSharp.Abstractions" />
+    <PackageReference Include="AXSharp.Connector" />
+    <PackageReference Include="GitVersion.MsBuild">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+
+
+  <ItemGroup>
 	  <Compile Update="Resources\PlcStringResources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
@@ -80,5 +91,6 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
-	</ItemGroup>
+    <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
+  </ItemGroup>
 </Project>
