--- a/src/templates.simple/app/apax.yml
+++ b/src/templates.simple/app/apax.yml
@@ -16,9 +16,7 @@ dependencies:
   "@ix-ax/axopen.components.pneumatics": '0.0.0-dev.0'
   "@ix-ax/axopen.components.elements": '0.0.0-dev.0'
   "@ix-ax/axopen.components.cognex.vision": '0.0.0-dev.0'
-  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
-  
-  
+  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'    
 variables:
   APAX_BUILD_ARGS: [-d]
 scripts:
@@ -29,37 +27,9 @@ scripts:
   postbuild: apax ixc
   download:
     - apax install
-    - apax build
-    # Here you will need to set the argumen -t to your plc OP and -i to platfrom you are dowloading to
-
+    - apax build    
+    # Here you will need to set the argumen -t to your plc IP and -i to platfrom you are dowloading to
     # --default-server-interface is a must if you are using WebAPI      
     - apax sld --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r --default-server-interface
-  watch:
-    - dotnet watch --project ..\\axosimple.app\\axosimple.hmi.csproj
-  da:
-    - apax download
-    - apax watch
-  check+download: |
-    if [ $AXTARGET ]; then
-      if [ $AXTARGETPLATFORMINPUT ]; then
-        if ping -n 1 $AXTARGET &> /dev/null; then
-          echo "Downloading from:" $AXTARGETPLATFORMINPUT "=>" $AXTARGET
-          apax download
-        else
-          echo "Target with IP address:" $AXTARGET "is not accessible. No download is going to be performed!!!"
-        fi
-      else
-        echo "Environment variable AXTARGETPLATFORMINPUT not defined!!!"
-      fi
-    else
-      echo "Environment variable AXTARGET not defined!!!"
-    fi
-  rr:
-    - apax build
-    - apax download
-    - apax watch
-  fr:
-    - ..\\scripts\\StartPlcSimAdvCli.exe
-    - apax install
-    - apax rr
+  
   
