adds more documentation

--- a/src/templates.simple/app/apax.yml
+++ b/src/templates.simple/app/apax.yml
@@ -25,11 +25,14 @@ scripts:
     - dotnet ixc
     - dotnet ixr
   postbuild: apax ixc
-  download:
+  push:
+    - apax build
+    - apax download
+  build:
     - apax install
-    - apax build    
+    - apax build        
+  download:
     # Here you will need to set the argumen -t to your plc IP and -i to platfrom you are dowloading to
-    # --default-server-interface is a must if you are using WebAPI      
+    # --default-server-interface is a must if you are using WebAPI          
     - apax sld --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r --default-server-interface
-  
   
