--- a/src/template.axolibrary/app/ix/app_appconnectorname.csproj
+++ b/src/template.axolibrary/app/ix/app_appconnectorname.csproj
@@ -17,6 +17,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\src\dotnetlibs\ix_ax_axolib.csproj" />
+	  <ProjectReference Include="..\..\src\projname\ix_ax_axolib.csproj" />
 	</ItemGroup>
 </Project>
