--- a/src/template.axolibrary/docs/toc.yml
+++ b/src/template.axolibrary/docs/toc.yml
@@ -1,7 +1,22 @@
-items:
-- name: Introduction
-  href: README.md
-- name: HowTos
-  href: HOWTO.md
-- name: Troubleshooting
-  href: TROUBLES.md
+      items:
+      - name: Introduction
+        href: index.md  
+      - name : Packages  
+        items :
+          - name: Controller
+            href: ../ctrl/README.md
+          - name: .NET TWIN
+            href: ../src/projname/README.md
+          - name: Blazor
+            href: ../src/projname.blazor/README.md    
+      - name: Components
+        href: README.md
+        items:
+          - name: Component 1
+            href: Component_1.md
+          - name: Component 2
+            href: Component_2.md
+      - name: Changes
+        href: CHANGELOG.md      
+      - name: Troubleshooting
+        href: TROUBLES.md
