update to AX# v0.15.0-alpha.153

--- a/cake/Properties/launchSettings.json
+++ b/cake/Properties/launchSettings.json
@@ -27,6 +27,10 @@
     "no-build-test-L3": {
       "commandName": "Project",
       "commandLineArgs": "--do-test --test-level 10 --skip-build"
+    },
+    "build": {
+      "commandName": "Project",
+      "commandLineArgs": ""
     }
   }
 }
