--- a/src/probers/ctrl/AXSharp.config.json
+++ b/src/probers/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Probers","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Probers","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_probers.csproj"}
