--- a/src/simatic1500/ctrl/AXSharp.config.json
+++ b/src/simatic1500/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"ix","UseBase":false}
+{"OutputProjectFolder":"ix","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_simatic1500.csproj"}
