--- a/src/template.axolibrary/ctrl/AXSharp.config.json
+++ b/src/template.axolibrary/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\projname","UseBase":false}
+{"OutputProjectFolder":"..\\src\\projname","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_apaxlibname.csproj"}
