--- a/src/templates.simple/axosimple.twin/axosimple.csproj
+++ b/src/templates.simple/axosimple.twin/axosimple.csproj
@@ -5,9 +5,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AXSharp.Abstractions"/>
-    <PackageReference Include="AXSharp.Connector"/>
-    <PackageReference Include="AXSharp.Connector.S71500.WebAPI"/>
+    <PackageReference Include="AXSharp.Abstractions" />
+    <PackageReference Include="AXSharp.Connector" />
+    <PackageReference Include="AXSharp.Connector.S71500.WebAPI" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include=".g\**" />
@@ -18,6 +18,8 @@
     <ProjectReference Include="..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
     <ProjectReference Include="..\..\data\src\AXOpen.Data\ix_ax_axopen_data.csproj" />
     <ProjectReference Include="..\..\inspectors\src\AxOpen.Inspectors\ix_ax_axopen_inspectors.csproj" />
+    <ProjectReference Include="..\..\components.elements\src\AXOpen.Components.Elements\ix_ax_axopen_components_elements.csproj" />
+    <ProjectReference Include="..\..\simatic1500\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\PlcStringResources.Designer.cs">
