--- a/src/abstractions/app/AXSharp.config.json
+++ b/src/abstractions/app/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"ix","UseBase":false}
+{"OutputProjectFolder":"ix","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"abstractions_app.csproj"}
