--- a/src/components.cognex.vision/app/AXSharp.config.json
+++ b/src/components.cognex.vision/app/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"ix","UseBase":false}
+{"OutputProjectFolder":"ix","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"axopen_components_cognex_vision_integrations.csproj"}
