--- a/src/components.elements/ctrl/AXSharp.config.json
+++ b/src/components.elements/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Components.Elements","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Components.Elements","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_components_elements.csproj"}
