--- a/src/components.pneumatics/ctrl/AXSharp.config.json
+++ b/src/components.pneumatics/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Components.Pneumatics","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Components.Pneumatics","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_components_pneumatics.csproj"}
