--- a/src/core/ctrl/AXSharp.config.json
+++ b/src/core/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Core","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Core","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_core.csproj"}
