--- a/src/data/ctrl/AXSharp.config.json
+++ b/src/data/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Data","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Data","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_data.csproj"}
