--- a/src/inspectors/app/AXSharp.config.json
+++ b/src/inspectors/app/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"ix","UseBase":false}
+{"OutputProjectFolder":"ix","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"axopen_inspectors.csproj"}
