--- a/src/integrations/app/AXSharp.config.json
+++ b/src/integrations/app/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Integrations","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Integrations","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"axopen_integrations.csproj"}
