--- a/src/probers/ctrl/apax.yml
+++ b/src/probers/ctrl/apax.yml
@@ -5,6 +5,7 @@ targets:
   - axunit-llvm
 files:
   - src
+  - axsharp.companion.json
 dependencies:
   "@ix-ax/axopen.core": '0.0.0-dev.0'
 devDependencies:
