--- a/src/templates.simple/app/AXSharp.config.json
+++ b/src/templates.simple/app/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\axosimple.twin","UseBase":false}
+{"OutputProjectFolder":"..\\axosimple.twin","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"axosimple.csproj"}
