--- a/src/timers/app/AXSharp.config.json
+++ b/src/timers/app/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"ix","UseBase":false}
+{"OutputProjectFolder":"ix","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"timers_app.csproj"}
