--- a/src/utils/ctrl/AXSharp.config.json
+++ b/src/utils/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\src\\AXOpen.Utils","UseBase":false}
+{"OutputProjectFolder":"..\\src\\AXOpen.Utils","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_utils.csproj"}
