--- a/src/templates.simple/axosimple.twin/axosimple.csproj
+++ b/src/templates.simple/axosimple.twin/axosimple.csproj
@@ -16,10 +16,10 @@
     <ProjectReference Include="..\..\components.cognex.vision\src\AXOpen.Cognex.Vision\ix_ax_axopen_components_cognex_vision.csproj" />
     <ProjectReference Include="..\..\components.pneumatics\src\AXOpen.Components.Pneumatics\ix_ax_axopen_components_pneumatics.csproj" />
     <ProjectReference Include="..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
-    <ProjectReference Include="..\..\data\src\AXOpen.Data\ix_ax_axopen_data.csproj" />
-    <ProjectReference Include="..\..\inspectors\src\AxOpen.Inspectors\ix_ax_axopen_inspectors.csproj" />
+    <ProjectReference Include="..\..\data\src\AXOpen.Data\ix_ax_axopen_data.csproj" />   
     <ProjectReference Include="..\..\components.elements\src\AXOpen.Components.Elements\ix_ax_axopen_components_elements.csproj" />
     <ProjectReference Include="..\..\simatic1500\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
+    <ProjectReference Include="..\..\inspectors\src\AXOpen.Inspectors\ix_ax_axopen_inspectors.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\PlcStringResources.Designer.cs">
