--- a/src/timers/ctrl/AXSharp.config.json
+++ b/src/timers/ctrl/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"ix","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_timers.csproj"}
+{"OutputProjectFolder":"..\\src\\AXOpen.Timers","UseBase":false,"NoDependencyUpdate":false,"ProjectFile":"ix_ax_axopen_timers.csproj"}
