--- a/src/timers/src/AXOpen.Timers/ix_ax_axopen_timers.csproj
+++ b/src/timers/src/AXOpen.Timers/ix_ax_axopen_timers.csproj
@@ -3,6 +3,8 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<PackageId>AXOpen.Timers</PackageId>
+		<RootNamespace>AXOpen.Timers</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
