--- a/src/integrations/src/AXOpen.Integrations/axopen_integrations.csproj
+++ b/src/integrations/src/AXOpen.Integrations/axopen_integrations.csproj
@@ -6,9 +6,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>		
-		<PackageReference Include="AXSharp.Abstractions"/>
-		<PackageReference Include="AXSharp.Connector"/>
-		<PackageReference Include="AXSharp.Connector.S71500.WebAPI"/>
+		<PackageReference Include="AXSharp.Abstractions" />
+		<PackageReference Include="AXSharp.Connector" />
+		<PackageReference Include="AXSharp.Connector.S71500.WebAPI" />
 	</ItemGroup>
 
   <ItemGroup>
@@ -31,5 +31,6 @@
     <ProjectReference Include="..\..\..\data\src\AXOpen.Data\ix_ax_axopen_data.csproj" />
     <ProjectReference Include="..\..\..\data\src\repositories\InMemory\AXOpen.Data.InMemory.csproj" />
     <ProjectReference Include="..\..\..\probers\src\AXOpen.Probers\ix_ax_axopen_probers.csproj" />
+    <ProjectReference Include="..\..\..\simatic1500\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
   </ItemGroup>
 </Project>
