--- a/src/core/src/AXOpen.Core/ix_ax_axopen_core.csproj
+++ b/src/core/src/AXOpen.Core/ix_ax_axopen_core.csproj
@@ -25,7 +25,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
-	  <ProjectReference Include="..\..\..\timers\ctrl\ix\ix_ax_axopen_timers.csproj" />
+	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />	  
 	</ItemGroup>
 
 	<ItemGroup>
