--- a/src/template.axolibrary/app/ix/app_apaxappname.csproj
+++ b/src/template.axolibrary/app/ix/app_apaxappname.csproj
@@ -24,5 +24,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\projname\ix_ax_axolib.csproj" />
+	  <ProjectReference Include="..\..\src\projname\ix_ax_apaxlibname.csproj" />
+	  <ProjectReference Include="..\..\..\simatic1500\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
 	</ItemGroup>
 </Project>
