add meta folder to package

--- a/src/components.elements/app/ix/ElementsComponents.csproj
+++ b/src/components.elements/app/ix/ElementsComponents.csproj
@@ -13,9 +13,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Include=".g\**" />
-	</ItemGroup>
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
 
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
+	</ItemGroup>
+	
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\AXOpen.Components.Elements\ix_ax_axopen_components_elements.csproj" />
 	</ItemGroup>
