--- a/src/traversals/apax/ix/apax_traversal.csproj
+++ b/src/traversals/apax/ix/apax_traversal.csproj
@@ -11,6 +11,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Include=".g\**" />
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
 	</ItemGroup>
 </Project>
