--- a/src/abstractions/app/ix/abstractions_app.csproj
+++ b/src/abstractions/app/ix/abstractions_app.csproj
@@ -12,8 +12,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Include=".g\**" />
-	</ItemGroup>
+    <Compile Include=".g\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include=".meta\" />
+    <Content Include=".meta\**" />
+  </ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
