--- a/src/components.cognex.vision/src/AXOpen.Cognex.Vision/ix_ax_axopen_components_cognex_vision.csproj
+++ b/src/components.cognex.vision/src/AXOpen.Cognex.Vision/ix_ax_axopen_components_cognex_vision.csproj
@@ -14,8 +14,14 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <Compile Include=".g\**" />
-  </ItemGroup>
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
+	</ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
