--- a/src/components.pneumatics/app/ix/PneumaticComponents.csproj
+++ b/src/components.pneumatics/app/ix/PneumaticComponents.csproj
@@ -13,7 +13,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Include=".g\**" />
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
 	</ItemGroup>
 
 	<ItemGroup>
