--- a/src/integrations/src/AXOpen.Integrations/axopen_integrations.csproj
+++ b/src/integrations/src/AXOpen.Integrations/axopen_integrations.csproj
@@ -12,18 +12,13 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <Compile Include=".g\**" />
-  </ItemGroup>
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Remove="AXOpen.Messaging - Copy\**" />
-    <EmbeddedResource Remove="AXOpen.Messaging - Copy\**" />
-    <None Remove="AXOpen.Messaging - Copy\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include=".g\Onliners\ix-core\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
+	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\components.cognex.vision\src\AXOpen.Cognex.Vision\ix_ax_axopen_components_cognex_vision.csproj" />
