--- a/src/probers/app/ix/probers_app.csproj
+++ b/src/probers/app/ix/probers_app.csproj
@@ -13,9 +13,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Include=".g\**" />
-	</ItemGroup>
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
 
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
+	</ItemGroup>
+	
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
 	  <ProjectReference Include="..\..\src\AXOpen.Probers\ix_ax_axopen_probers.csproj" />
