--- a/src/template.axolibrary/src/projname/ix_ax_apaxlibname.csproj
+++ b/src/template.axolibrary/src/projname/ix_ax_apaxlibname.csproj
@@ -32,13 +32,13 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include=".g\**" />
-	</ItemGroup>
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Include=".meta\**" />
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
 	</ItemGroup>
-
 	<ItemGroup>
 		<PackageReference Include="AXSharp.Abstractions" />
 		<PackageReference Include="AXSharp.Connector" />
