--- a/src/templates.simple/ctrl/ix/axosimple_ctrl.csproj
+++ b/src/templates.simple/ctrl/ix/axosimple_ctrl.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="AXSharp.Connector.S71500.WebAPI"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include=".g\**" />
-  </ItemGroup>  
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
+	</ItemGroup>
 </Project>
