--- a/src/timers/src/AXOpen.Timers/ix_ax_axopen_timers.csproj
+++ b/src/timers/src/AXOpen.Timers/ix_ax_axopen_timers.csproj
@@ -13,7 +13,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Include=".g\**" />
+    	<Compile Include=".g\**" />
+  	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
 	</ItemGroup>
 
 	<ItemGroup>
