--- a/src/templates.simple/axosimple.app/axosimple.hmi.csproj
+++ b/src/templates.simple/axosimple.app/axosimple.hmi.csproj
@@ -24,8 +24,8 @@
 	</ItemGroup>-->
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Localization"/>
-	  <PackageReference Include="Serilog.Sinks.Console"/>
+	  <PackageReference Include="Microsoft.Extensions.Localization" />
+	  <PackageReference Include="Serilog.Sinks.Console" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\base\src\AXOpen.Logging\AXOpen.Logging.Serilog.csproj" />
@@ -50,5 +50,8 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>BlazorResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 </Project>
